syntax = "proto3";

package arw;

service ArwService {
  rpc Healthz(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool ok = 1;
}

